Retrieve shipping prices and add shipping component

--- a/src/app/cart-view/cart-view.component.html
+++ b/src/app/cart-view/cart-view.component.html
@@ -4,3 +4,7 @@
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
 </div>
+
+<p>
+  <a routerLink="/shipping">Shipping Prices</a>
+</p>
